# ParkSense-AI

./: Dockerfile  LICENSE  README.md  database.py  docker-compose.yaml  env.example  history_entries.csv  main.py  pyproject.toml
DS/functions/: configuration.py  image_process.py
DS/models/: model_character_recognition.keras
DS/notebook/: cars.ipynb  model_character_recognition.keras  plate_recognizable_model_keras.ipynb
DS/notebook/logs/fit/20240608-203230/train/: events.out.tfevents.1717869222.LAPTOP-HFN2J9AQ.11804.0.v2  events.out.tfevents.1717872858.LAPTOP-HFN2J9AQ.11804.2.v2  events.out.tfevents.1717873110.LAPTOP-HFN2J9AQ.11804.4.v2  events.out.tfevents.1717873515.LAPTOP-HFN2J9AQ.11804.6.v2
auth/: crud.py  models.py  routers.py  schemas.py  utils.py
docs/: conf.py
image_processing/: detection.py  ocr.py  routers.py
migrations/versions/: 207cce6b4b32_user_new_att_2.py  44515960b06b_user_new_att.py  90c60ceb3d90_chat_id_unique_false.py  9615850ff351_ttoken.py  eb7598f31ddb_init.py
src/conf/: config.py
src/entity/: models.py
src/repository/: car.py  history.py  image.py  parking.py  users.py
src/routes/: admin.py  auth.py  history.py  image.py  parking.py  users.py
src/schemas/: car.py  history.py  image.py  parking.py  user.py
src/services/: auth.py  cloud_service.py  email.py  email_sender.py  telegram_sender.py
src/services/templates/: verify_email.html
src/static/: telebot_tokens.py
src/templates/: index.html
src/templates/css/: style.css
src/templates/js/: script.js
(+16 files in other folders)
